--- a/app/styles/_personal_contact_info.scss
+++ b/app/styles/_personal_contact_info.scss
@@ -339,6 +339,12 @@ input:disabled {
 .personal-contact.common-form input[type="text"]:not(.date-clear) {
   width: 67%;
 }
+#company-organization .creative-zip {
+  padding-right: 20px;
+}
+#company-organization .state + .creative-zip {
+  padding-right: 0px;
+}
 @media (min-width: 320px) and (max-width: 767px){
 	.common-form .form-type-radio{
 		margin: 15px 45px 9px 0;
